# aquarium-device-manager

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  TODO - current iteration.md  TODO.md  Untitled-2.c  brightness-test.html  changes.patch  multi_channel_example.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/: copilot-instructions.md
.github/workflows/: build-deploy.yml
archive/home_assistant/: README.md
custom_components/chihiros/: __init__.py  to-do.md
custom_components/chihiros/chihiros_led_control/: chihirosctl.py  commands.py  doser_status.py  service.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: commands_plan.md  deployment-sync.md  frontend-architecture.md  frontend-ui-refactoring.md  improvement_plan.md  project-status.md  roadmap.md
frontend/: auto-delete-test.html  compare.html  debug-test.html  dev.html  index.html  legacy.html  package.json  percentages-test.html  tsconfig.json  vite.config.ts  wattage-test.html
frontend/dev/: index.html
frontend/dist-test/: wattage-calculator.js  wattage-data.js
frontend/src/: # Code Citations.md  Code Citations.md  api.ts  debugMain.ts  dev-tools.ts  env.d.ts  main-original.ts  main.ts  modernMain.ts  navigation.ts  productionMain.ts  style.css  testToolsMain.ts  types.ts  utils.ts  watt-backupv2.ts.bup  watt-calc-backup.ts.bup  wattage-calculator.ts
frontend/src/api/: commands.ts  configurations.ts  devices.ts  http.ts  index.ts  legacy.ts
frontend/src/dev/: debugMain.ts  dev-tools.ts
frontend/src/stores/: deviceStore.ts
frontend/src/test/: testToolsMain.ts
frontend/src/testTools/: percentagesTest.ts  wattageTest.ts
frontend/src/types/: doser.ts  light.ts  models.ts
frontend/src/ui/: dashboard-legacy.ts  dashboards.ts  dev.ts  deviceCard.ts  modernDashboard.css  modernDashboard.ts  modernDeviceCard.ts  notifications.ts  pageNavigation.ts  polling.ts  productionDashboard.css  productionDashboard.ts  stateSubscriptions.ts
frontend/src/utils/: Percentages.txt  percentages-test.html  percentagesTest.ts  test-wattage.js  wattage-calculator.ts  wattage-data.ts  wattageTest.ts
frontend/test/: debug-test.html  index.html  wattage-test.html
hassio/: Dockerfile  README.md  config.yaml  run.sh
scripts/: build-all.sh  dev-env.sh
src/aquarium_device_manager/: atomic_config.py  ble_service.py  command_executor.py  commands_model.py  config_helpers.py  config_migration.py  const.py  doser_status.py  doser_storage.py  exception.py  light_status.py  light_storage.py  schemas.py  serializers.py  service.py  spa.py  storage_utils.py  timezone_utils.py
src/aquarium_device_manager/api/: routes_commands.py  routes_configurations.py  routes_devices.py
src/aquarium_device_manager/commands/: __init__.py  encoder.py  ops.py
src/aquarium_device_manager/device/: __init__.py  base_device.py  c2.py  c2rgb.py  commander4.py  doser.py  light_device.py  wrgb2.py  wrgb2_pro.py  z_light_tiny.py
src/chihiros_device_manager/: __init__.py  api.py  ble_service.py  chihirosctl.py  command_executor.py  commands.py  const.py  core_api.py  doser_commands.py  doser_status.py  doser_storage.py  light_status.py  light_storage.py  schemas.py  serializers.py  service.py  spa.py
src/chihiros_device_manager/api/: __init__.py  routes_commands.py  routes_devices.py  routes_dosers.py  routes_lights.py
src/chihiros_device_manager/commands/: __init__.py  encoder.py  ops.py
tests/: conftest.py  test_api_configurations.py  test_atomic_config.py  test_command_executor.py  test_command_validation.py  test_commands.py  test_config_storage_integration.py  test_doser_lifetime_totals.py  test_doser_storage.py  test_doser_time_tolerance.py  test_encoder_checksum_collision.py  test_encoder_sanitization.py  test_integration_metadata_fix.py  test_light_status.py  test_light_storage.py  test_message_id.py  test_metadata_filtering.py  test_service_auto_discover.py  test_service_endpoints.py  test_spa.py  test_status_wait_env.py
tools/: README.md  analyze_doser_log.py  chihirosctl.py  doser_structure.ts  light_structure.ts  manual_doser_test.py
(+62 files in other folders)
