[build-system]
requires = [
    "setuptools==76.0.0",
    "setuptools_scm[toml]==8.2.0",
    "wheel==0.45.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "aquarium-device-manager"
version = "2.0.0"
description = "Python service for controlling aquarium devices over Bluetooth Low Energy"
readme = "README.md"

requires-python = ">=3.10"

[project.urls]
"Source Code" = "https://github.com/calebvenner/chihiros-device-manager"
"Bug Reports" = "https://github.com/calebvenner/chihiros-device-manager/issues"
"Original Project" = "https://github.com/TheMicDiet/chihiros-led-control"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = [
  "src",
]

[tool.setuptools_scm]

[project.scripts]
aquarium-service = "aquarium_device_manager.service:main"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[flake8]
max-line-length = 80
extend-ignore = [
    "E203",
]
extend-exclude = [
    "archive",
]

[tool.doc8]
max-line-length = 80
