# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://github.com/calebvenner/chihiros-device-manager

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    bleak==0.22.3
    bleak_retry_connector==3.9.0
    typer[all]==0.15.2
    rich==13.9.4
    fastapi==0.115.0
    uvicorn[standard]==0.30.5
    jinja2==3.1.4
    python-multipart==0.0.9
    httpx==0.27.2
